--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="flex menu_wrap mm2">
                             <div class="flex main_menu">
-                                <a href="tracking_mumber.html">
+                                <a href="#">
                                     <img src="./img/track_num_yb.svg" alt="운송장 등록">
                                     <p>운송장등록</p>
                                 </a>
