--- a/tracking_detail.html
+++ b/tracking_detail.html
@@ -17,14 +17,45 @@
                 <p></p>
             </div>
         </header>
-        <article>
-            <div class="inner">
-                <div id="detail">
-                    <div class="track_logo"><img src="./img/CJparcel.png" alt="대한통운"></div>
-                    <div></div>
+        <div class="inner td_wrap">
+            <article>
+                    <div class="comp_img">
+                        <div class="track_logo"><img src="./img/CJparcel.png" alt="대한통운"></div>                
+                    </div>
+            </article>
+            <article class="center">
+                <div class="parcel_stat">
+                    <div class="flex">
+                        <h1>
+                            <span class="blue">배송 중</span>                
+                        </h1>
+                        <h3>
+                            우리동네 도착
+                        </h3>
+                    </div>
+                 </div>
+            </article>
+            
+            <article class="detail2">
+                <div class="ups">
+                    <div class="uparrow"><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
+                    <div><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
+                    <h5 class="gray">위로 올려 자세히보기</h5>
                 </div>
-            </div>
-        </article>
+                <div class="detail_in_detail">
+                    <div class="line"><img src="./img/Line_1.svg" alt="열기버튼"></div>
+                    <div class="flex dinfo">
+                        <h5><span class="gray">운송장</span>321653213135</h5>
+                        <h5><span class="gray">수령주소</span>부산 해운대구</h5>
+                        <h5><span class="gray">받는사람</span>고길동</h5>
+                        <h5><span class="gray">보낸사람</span>박둘리</h5>
+                    </div>
+                </div>
+                <div class="detail_cont">
+
+                </div>
+            </article>
+        </div>
         <footer>
             <div class="inner flex">
                 <div>
