--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <title>배송지키미</title>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/layout.css">
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery-migrate-3.0.0.js"></script>
+    <script>
+//      window.onload = function(){
+//     alert();
+//          window.resizeTo(425, 640);
+//  } 
+//  $(function(){
+//      alert();
+//      window.resizeTo(425, 640);
+//  })
+         
+     </script>
 </head>
-<body>
+<body onload="window.resizeTo(425, 640);">
     <div id="wrap">
         <header>
             <div class="inner flex">
