--- a/tracking_detail.html
+++ b/tracking_detail.html
@@ -7,6 +7,9 @@
     <title>배송지키미</title>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/layout.css">
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery-migrate-3.0.0.js"></script>
+    
 </head>
 <body>
     <div id="wrap">
@@ -18,11 +21,9 @@
             </div>
         </header>
         <div class="inner td_wrap">
-            <article>
                     <div class="comp_img">
                         <div class="track_logo"><img src="./img/CJparcel.png" alt="대한통운"></div>                
                     </div>
-            </article>
             <article class="center">
                 <div class="parcel_stat">
                     <div class="flex">
@@ -50,10 +51,22 @@
                         <h5><span class="gray">받는사람</span>고길동</h5>
                         <h5><span class="gray">보낸사람</span>박둘리</h5>
                     </div>
+                    <div class="detail_cont flex">
+                        <div class="process_bar flex">
+                            <img src="./img/proces_now.svg" alt="현 배송상태">
+                            <img src="./img/proces_com.svg" alt="완료된 배송상태">
+                            <img src="./img/proces_com.svg" alt="완료된 배송상태">
+                            <img src="./img/proces_com.svg" alt="완료된 배송상태">
+                        </div>
+                        <div class="process_info flex">
+                            <div class="processing"><p>우리동네 도착 (배달시간 14사 ~ 16시)</p></div>
+                            <div class="process_com"><p>군포 HUB 출발</p></div>
+                            <div class="process_com"><p>군포 HUB 도착</p></div>
+                            <div class="process_com"><p>출고</p></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="detail_cont">
-
-                </div>
+                
             </article>
         </div>
         <footer>
