--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="inner flex">
                 <p></p>
-                <a href="index.html"><h3>배송지키미</h3></a>
+                <a href="index.html" class="actbtn" class="actbtn"><h3>배송지키미</h3></a>
                 <p></p>
             </div>
         </header>
@@ -37,7 +37,7 @@
                     <div class="flex main_wrap">
                         <div class="flex menu_wrap mm1">
                             <div class="flex main_menu">
-                                <a href="tracking.html">
+                                <a href="tracking.html" class="actbtn" class="actbtn">
                                     <img src="./img/tracking_yb.svg" alt="배송조회">
                                     <p>배송조회</p>
                                 </a>
@@ -80,31 +80,31 @@
         <footer>
             <div class="inner flex">
                 <div>
-                    <a href="tracking.html">
+                    <a href="tracking.html" class="actbtn">
                         <img src="./img/tracking.svg" alt="배송추적">
                         <h6>배송추적</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="tracking_number.html">
+                    <a href="tracking_number.html" class="actbtn">
                         <img src="./img/track_num.svg" alt="운송장등록">
                         <h6>운송장등록</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="index.html">
+                    <a href="index.html" class="actbtn">
                         <img src="./img/clarity_home-line.svg" alt="홈화면">
                         <h6>HOME</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="parcel.html">
+                    <a href="parcel.html" class="actbtn">
                         <img src="./img/shipping-box-01.svg" alt="택배신청">
                         <h6>택배신청</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="more.html">
+                    <a href="more.html" class="actbtn">
                         <img src="./img/more.svg" alt="더보기">
                         <h6>더보기</h6>
                     </a>
