--- a/tracking.html
+++ b/tracking.html
@@ -12,7 +12,7 @@
     <div id="wrap">
         <header>
             <div class="inner flex header_menu">
-                <a href="index.html"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
+                <a href="index.html" class="actbtn"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
                 <a href="#"><h3>배송추적</h3></a>
                 <a href="#"><h4>삭제</h4></a>
             </div>
@@ -28,7 +28,7 @@
                     </div>
                 </div>                
                     <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                             <h4 class="track_name">배송이 완료된 택배입니다.</h4>
                             <h5 class="tracking_nums">321653213135</h5>
                             <h5 class="shipping_stat">배송완료</h5>
@@ -37,7 +37,7 @@
                         </a>
                     </div>               
                    <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">우리동네 도착한 택배입니다</h4>
                         <h5 class="tracking_nums">372316532153</h5>
                         <h5 class="shipping_stat">우리동네 도착</h5>
@@ -46,7 +46,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작된 택배입니다</h4>
                         <h5 class="tracking_nums">365651651561</h5>
                         <h5 class="shipping_stat">배송시작</h5>
@@ -55,7 +55,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작 전인 택배입니다</h4>
                         <h5 class="tracking_nums">90746581354</h5>
                         <h5 class="shipping_stat">배송시작 전</h5>
@@ -64,7 +64,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 완료된 택배입니다.</h4>
                         <h5 class="tracking_nums">321653213135</h5>
                         <h5 class="shipping_stat">배송완료</h5>
@@ -73,7 +73,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">우리동네 도착한 택배입니다</h4>
                         <h5 class="tracking_nums">372316532153</h5>
                         <h5 class="shipping_stat">우리동네 도착</h5>
@@ -82,7 +82,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작된 택배입니다</h4>
                         <h5 class="tracking_nums">365651651561</h5>
                         <h5 class="shipping_stat">배송시작</h5>
@@ -91,7 +91,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작 전인 택배입니다</h4>
                         <h5 class="tracking_nums">90746581354</h5>
                         <h5 class="shipping_stat">배송시작 전</h5>
@@ -100,7 +100,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 완료된 택배입니다.</h4>
                         <h5 class="tracking_nums">321653213135</h5>
                         <h5 class="shipping_stat">배송완료</h5>
@@ -109,7 +109,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">우리동네 도착한 택배입니다</h4>
                         <h5 class="tracking_nums">372316532153</h5>
                         <h5 class="shipping_stat">우리동네 도착</h5>
@@ -118,7 +118,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작된 택배입니다</h4>
                         <h5 class="tracking_nums">365651651561</h5>
                         <h5 class="shipping_stat">배송시작</h5>
@@ -127,7 +127,7 @@
                      </a>
                     </div>   
                 <div class="tracking_item">
-                        <a href="tracking_detail.html" class="item_detail">
+                        <a href="tracking_detail.html" class="item_detail actbtn">
                         <h4 class="track_name">배송이 시작 전인 택배입니다</h4>
                         <h5 class="tracking_nums">90746581354</h5>
                         <h5 class="shipping_stat">배송시작 전</h5>
@@ -140,31 +140,31 @@
         <footer>
             <div class="inner flex">
                 <div>
-                    <a href="tracking.html">
+                    <a href="tracking.html" class="actbtn">
                         <img src="./img/tracking.svg" alt="배송추적">
                         <h6>배송추적</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="tracking_number.html">
+                    <a href="tracking_number.html" class="actbtn">
                         <img src="./img/track_num.svg" alt="운송장등록">
                         <h6>운송장등록</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="index.html">
+                    <a href="index.html" class="actbtn">
                         <img src="./img/clarity_home-line.svg" alt="홈화면">
                         <h6>HOME</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="parcel.html">
+                    <a href="parcel.html" class="actbtn">
                         <img src="./img/shipping-box-01.svg" alt="택배신청">
                         <h6>택배신청</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="more.html">
+                    <a href="more.html" class="actbtn">
                         <img src="./img/more.svg" alt="더보기">
                         <h6>더보기</h6>
                     </a>
