--- a/more.html
+++ b/more.html
@@ -12,8 +12,8 @@
     <div id="wrap">
         <header>
             <div class="inner flex header_menu">
-                <a href="index.html"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
-                <a href="index.html"><h3>더 보기</h3></a>
+                <a href="index.html" class="actbtn"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
+                <a href="index.html" class="actbtn"><h3>더 보기</h3></a>
                 <p class="setting_btn"><img src="./img/akar-icons_gear.svg" alt="앱 설정버튼"></p>
             </div>
         </header>
@@ -83,31 +83,31 @@
         <footer>
             <div class="inner flex">
                 <div>
-                    <a href="tracking.html">
+                    <a href="tracking.html" class="actbtn">
                         <img src="./img/tracking.svg" alt="배송추적">
                         <h6>배송추적</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="tracking_number.html">
+                    <a href="tracking_number.html" class="actbtn">
                         <img src="./img/track_num.svg" alt="운송장등록">
                         <h6>운송장등록</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="index.html">
+                    <a href="index.html" class="actbtn">
                         <img src="./img/clarity_home-line.svg" alt="홈화면">
                         <h6>HOME</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="parcel.html">
+                    <a href="parcel.html" class="actbtn">
                         <img src="./img/shipping-box-01.svg" alt="택배신청">
                         <h6>택배신청</h6>
                     </a>
                 </div>
                 <div>
-                    <a href="more.html">
+                    <a href="more.html" class="actbtn">
                         <img src="./img/more.svg" alt="더보기">
                         <h6>더보기</h6>
                     </a>
