--- a/tracking_number.html
+++ b/tracking_number.html
@@ -12,8 +12,8 @@
     <div id="wrap">
         <header>
             <div class="inner flex header_menu">
-                <a href="index.html" class="actbtn"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
-                <a href="index.html" class="actbtn"><h3>운송장등록</h3></a>
+                <a href="#" ><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
+                <a href="#" ><h3>운송장등록</h3></a>
                 <p></p>
             </div>
         </header>
