--- a/tracking_detail.html
+++ b/tracking_detail.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/layout.css">
     <script src="./js/jquery-3.1.1.min.js"></script>
     <script src="./js/jquery-migrate-3.0.0.js"></script>
+    <script src="./js/detail.js"></script>
 </head>
 <body>
     <div id="wrap">
@@ -40,7 +41,7 @@
                 <div class="ups">
                     <div class="uparrow"><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
                     <div><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
-                    <h5 class="gray">위로 올려 자세히보기</h5>
+                    <h5 class="gray">클릭해서 자세히보기</h5>
                 </div>
                 <div class="detail_in_detail">
                     <div class="line"><img src="./img/Line_1.svg" alt="열기버튼"></div>
