--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="inner flex">
                 <p></p>
-                <a href="index.html" class="actbtn" class="actbtn"><h3>배송지키미</h3></a>
+                <a href="index.html" class="actbtn"><h3>배송지키미</h3></a>
                 <p></p>
             </div>
         </header>
