--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="flex main_wrap">
                         <div class="flex menu_wrap mm1">
                             <div class="flex main_menu">
-                                <a href="tracking.html" class="actbtn" class="actbtn">
+                                <a href="tracking.html" class="actbtn">
                                     <img src="./img/tracking_yb.svg" alt="배송조회">
                                     <p>배송조회</p>
                                 </a>
