--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/layout.css">
     <script src="./js/jquery-3.1.1.min.js"></script>
     <script src="./js/jquery-migrate-3.0.0.js"></script>
+    <script src="./js/detail.js"></script>
 </head>
 <body onload="window.resizeTo(425, 640);">
     <div id="wrap">
