--- a/parcel.html
+++ b/parcel.html
@@ -7,6 +7,9 @@
     <title>배송지키미</title>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/layout.css">
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery-migrate-3.0.0.js"></script>
+    <script src="./js/detail.js"></script>
 </head>
 <body>
     <div id="wrap">
