--- a/tracking_detail.html
+++ b/tracking_detail.html
@@ -40,7 +40,7 @@
             <article class="detail2">
                 <div class="ups">
                     <div class="uparrow"><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
-                    <div><img src="./img/ep_arrow-up.svg" alt="위로 스와이프"></div>
+                    <div><img src="./img/ep_arrow-up.svg" alt="위로 스와이프" class="swipe"></div>
                     <h5 class="gray">클릭해서 자세히보기</h5>
                 </div>
                 <div class="detail_in_detail">
