--- a/more.html
+++ b/more.html
@@ -16,7 +16,7 @@
         <header>
             <div class="inner flex header_menu">
                 <a href="index.html" class="actbtn"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
-                <a href="index.html" class="actbtn"><h3>더 보기</h3></a>
+                <a href="#"><h3>더 보기</h3></a>
                 <p class="setting_btn"><img src="./img/akar-icons_gear.svg" alt="앱 설정버튼"></p>
             </div>
         </header>
