--- a/tracking_detail.html
+++ b/tracking_detail.html
@@ -16,7 +16,7 @@
         <header>
             <div class="inner flex header_menu">
                 <a href="index.html" class="actbtn"><img src="./img/ep_arrow-left.svg" alt="뒤로가기"></a>
-                <a href="index.html" class="actbtn"><h3>배송지키미</h3></a>
+                <a href="#"><h3>배송지키미</h3></a>
                 <p></p>
             </div>
         </header>
